--- a/index.html
+++ b/index.html
@@ -28,6 +28,6 @@
     </div>
     <div id="color-scheme" class="color-scheme"></div>
   </div>
-  <script src="index.js"></script>
+  <script type="module" src="/index.js"></script>
 </body>
 </html>
